# sdk-nrf

./: .checkpatch.conf  west.yml
applications/nrf5340_audio/: README.md  projects.cmake  sample.yaml
applications/nrf5340_audio/doc/: Nordic Semiconductor DISCLAIMER.TXT  nRF5340_Audio_DK_user_guide.rst
applications/nrf5340_audio/ext/cirrus_logic/: CMakeLists.txt  README.md  openocd.cfg  release_notes.txt  sdk_version.h
applications/nrf5340_audio/ext/cirrus_logic/common/: create_syscfg_regs.c
applications/nrf5340_audio/ext/cirrus_logic/common/system_test_hw_0/: hw_0_bsp.c  hw_0_bsp.h
applications/nrf5340_audio/ext/cirrus_logic/cs47l63/: cs47l63.c  cs47l63.h  cs47l63_spec.h  makefile  version.h
applications/nrf5340_audio/ext/cirrus_logic/cs47l63/baremetal/: main.c
applications/nrf5340_audio/ext/cirrus_logic/cs47l63/bsp/: hw_0_bsp_cs47l63.c  hw_0_bsp_dut.h
applications/nrf5340_audio/ext/cirrus_logic/cs47l63/config/: cs47l63_syscfg_regs.c  cs47l63_syscfg_regs.h
applications/nrf5340_audio/ext/cirrus_logic/cs47l63/fw_pt/: cs47l63_fw_img.c  cs47l63_fw_img.h
applications/nrf5340_audio/ext/cirrus_logic/tools/firmware_converter/: firmware_converter.py  fw_img_v1_templates.py
applications/nrf5340_audio/ext/cirrus_logic/tools/wisce_script_converter/: c_array_exporter.py  wisce_script_converter.py
applications/nrf5340_audio/nrf5340_audio_app/: CMakeLists.txt  Kconfig  prj.conf  prj_debug.conf  prj_gateway.conf  prj_headset.conf
applications/nrf5340_audio/nrf5340_audio_app/src/: main.c
applications/nrf5340_audio/nrf5340_audio_app/src/audio/: Kconfig  audio_codec.c  audio_datapath.c  audio_datapath.h  audio_sync_timer.c  audio_sync_timer.h  streamctrl.c  streamctrl.h  sw_codec_select.c
applications/nrf5340_audio/nrf5340_audio_app/src/bluetooth/: Kconfig  ble_acl_common.c  ble_acl_gateway.c  ble_audio_services.c  ble_core.c  ble_core.h  ble_hci_vsc.c  ble_trans.c  ble_trans.h
applications/nrf5340_audio/nrf5340_audio_app/src/drivers/: Kconfig  cs47l63_comm.c  cs47l63_reg_conf.h  ina231.c  max14690.c
applications/nrf5340_audio/nrf5340_audio_app/src/modules/: Kconfig  audio_i2s.c  audio_i2s.h  audio_usb.c  button_handler.c  hw_codec.c  led.c  pmic.c  power_module.c  sd_card.c
applications/nrf5340_audio/nrf5340_audio_app/src/utils/: board_version.c  board_version.h  contin_array.h  fw_info_app.c.in
applications/nrf5340_audio/nrf5340_audio_app/src/utils/macros/: macros_common.h
applications/nrf5340_audio/nrf5340_audio_net/: ble5-ctr-rpmsg_3216.hex
applications/nrf5340_audio/tools/buildprog/: buildprog.py  nrf5340_audio_dk_devices.py  program.py
applications/nrf5340_audio/tools/uart_terminal/: uart_terminal.py
applications/nrf5340_audio/tools/uart_terminal/scripts/: open_putty.py  open_terminator.py
applications/nrf5340_audio/verification/: check.py  verify.cmake
boards/arm/nrf5340_audio_dk_nrf5340/: Kconfig  Kconfig.board  Kconfig.defconfig  board.h  nrf5340_audio_dk_cpunet_reset.c  nrf5340_audio_dk_nrf5340_cpuapp.dts  nrf5340_audio_dk_nrf5340_cpuapp_common.dts  nrf5340_audio_dk_nrf5340_cpuapp_defconfig  nrf5340_audio_dk_nrf5340_cpunet.dts  nrf5340_audio_dk_nrf5340_cpunet_defconfig  nrf5340_audio_dk_nrf5340_shared.dts
boards/arm/nrf5340_audio_dk_nrf5340/doc/: index.rst
include/bluetooth/services/: wifi_provisioning.h
samples/wifi/provisioning/: prj.conf
samples/wifi/provisioning/src/: main.c
subsys/bluetooth/services/: CMakeLists.txt  Kconfig
subsys/bluetooth/services/wifi_provisioning/: CMakeLists.txt  Kconfig.wifi_prov  wifi_config.c  wifi_prov.c  wifi_prov_handler.c  wifi_prov_internal.h
tests/nrf5340_audio/contin_array/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/data_fifo/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/macros/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/max14690/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/pcm_mix/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/pcm_stream_channel_modifier/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/sw_codec_lc3/: CMakeLists.txt  README.md  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/tone/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
